k8s/cicd-aws/aws-jenkins/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: cicd
spec:
  selector:
    app: jenkins-pod
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-agent
  namespace: cicd
spec:
  selector:
    app: jenkins-pod
  ports:
    - port: 50000
      protocol: TCP
      targetPort: 50000
  type: NodePort
